# IDbg

./: .gitignore  CMakeLists.txt  README.md  generate_ios_proj.sh  generate_osx_proj.sh  merge_frame.sh  pre-commit  simple_commit.sh  simple_commit_win.bat
IDbSample2/IDbSample2/: ViewController.h  main.m
IDbSample2/IDbSample2UITests/: IDbSample2UITests.m
IDbg/: .gitignore  CMakeLists.txt  IDbg.podspec  common_def.h  config_center.h  cpu_usage_monitor.h  cpu_usage_monitor_apple.cc  cpu_usage_monitor_config.h  generate_ios_proj.sh  generate_vs_proj.bat  heartbeat.h  heartbeat.mm  high_cpu_monitor.cc  merge_frame.sh  thread_cpu_info.cc  thread_model.cc  thread_model.h  thread_monitor.cc  thread_monitor.h  version_config.h.in
IDbg/IDbg/: CMakeLists.txt  MiniDumpFile.m  ThreadInfo.cc  ThreadInfo.h  ThreadInfo.m  build_config.h  ks_dynamic_linker.c  mini_dump_file.cc  mini_dump_file.h  sys_util.cc  sys_util.h  sys_util.mm  thread_cpu_info.cc  thread_cpu_info.h  thread_info.cc  thread_info.h  thread_model.cc  thread_model.h
IDbg/IDbg.xcodeproj/: project.pbxproj
IDbg/IDbg.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
IDbg/IDbg.xcodeproj/project.xcworkspace/xcuserdata/mjzheng.xcuserdatad/: UserInterfaceState.xcuserstate
IDbg/IDbg.xcodeproj/xcshareddata/xcschemes/: IDbg.xcscheme  IDbgAuto.xcscheme
IDbg/IDbg.xcodeproj/xcuserdata/mjzheng.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
IDbg/IDbg.xcodeproj/xcuserdata/mjzheng.xcuserdatad/xcschemes/: xcschememanagement.plist
IDbg/IDbgTests/: IDbgTests.m
IDbg/Products/IDbg/Debug/IDbg.framework/: IDbg
IDbg/Products/IDbg/Debug/IDbg.framework/Headers/: ThreadInfo.h  mini_dump_file.h
IDbg/Products/IDbg/IDbg.framework/: IDbg
IDbg/Products/IDbg/Release/IDbg.framework/: IDbg
IDbg/Products/IDbg/Release/IDbg.framework/Headers/: MiniDumpFile.h  ThreadInfo.h  thread_cpu_info.h  thread_info.h
IDbg/base/: singleton.h  sys_util.cc  sys_util.h  thread_model.cc  thread_model.h
IDbg/common/: sys_util.h
IDbg/core/: thread_cpu_info.cc  thread_cpu_info.h
IDbg/monitor/: config_center.h  high_cpu_monitor.cc  high_cpu_monitor.h  monitor_interface.h  monitor_thread.mm  monitor_timer.h  monitor_timer.mm  task_timer.h  task_timer.mm  thread_cpu_monitor.cc  thread_cpu_monitor.h  thread_cpu_monitor_timer.h  thread_cpu_monitor_timer.mm  thread_monitor.cc
IDbg/platforms_project/: ios.cmake
IDbgMac/IDbgMac/: AppDelegate.m
IDbgMac/IDbgMac/Base.lproj/: Main.storyboard
IDbgMac/IDbgMacTests/: IDbgMacTests.m
IDbgMac/IDbgMacUITests/: IDbgMacUITests.m
IDbgPods/: Podfile
IDbgPods/IDbgPods/: ViewController.h  ViewController.m
IDbgPods/IDbgPods.xcodeproj/: project.pbxproj
IDbgPods/IDbgPods.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
IDbgPods/IDbgPods.xcworkspace/: contents.xcworkspacedata
IDbgPods/IDbgPods.xcworkspace/xcuserdata/mjzheng.xcuserdatad/: UserInterfaceState.xcuserstate
IDbgPods/IDbgPodsTests/: IDbgPodsTests.m
IDbgSample/IDbgSample/: AppDelegate.m  Heartbeat.m  Heartbeat.mm  ViewController.m  main.m
IDbgSample/IDbgSample.xcodeproj/: project.pbxproj
IDbgSample/IDbgSample.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
IDbgSample/IDbgSample/Base.lproj/: Main.storyboard
app/Mac/IDbgMac/IDbgMac/: AppDelegate.h  ViewController.h  ViewController.mm  main.m
app/Mac/IDbgMac/IDbgMac.xcodeproj/: project.pbxproj
app/Mac/idbg_demo/idbg_demo/: ViewController.h  ViewController.m
app/bak/IDbSample2/IDbSample2/: AppDelegate.h  SceneDelegate.h  ViewController.mm
app/bak/IDbSample2/IDbSample2Tests/: IDbSample2Tests.m
app/bak/IDbgPods/IDbgPods/: main.m
app/bak/IDbgPods/IDbgPods.xcodeproj/: project.pbxproj
app/bak/IDbgSample/IDbgSample/: ViewController.m
app/bak/IDbgSample/IDbgSample.xcodeproj/: project.pbxproj
app/bak/IDbgSample/IDbgSampleTests/: IDbgSampleTests.m
app/iOS/IDbgPods/IDbgPods/: AppDelegate.m
app/iOS/IDbgPods/IDbgPodsUITests/: IDbgPodsUITests.m
app/iOS/IDbgSample/IDbgSample/: AppDelegate.h  Heartbeat.h  ViewController.h
app/iOS/IDbgSample/IDbgSampleUITests/: IDbgSampleUITests.m
app/ios/idbg_demo/: AppDelegate.h  CMakeLists.txt  SceneDelegate.m  ViewController.h
app/ios/idbg_demo/idbg_demo/: AppDelegate.m  Heartbeat.mm  SceneDelegate.h  ViewController.m
app/ios/idbg_demo/idbg_demo.xcodeproj/: project.pbxproj
app/ios/idbg_demo/idbg_demoTests/: idbg_demoTests.m
app/osx/idbg_demo/idbg_demo/: AppDelegate.m
app/osx/idbg_demo/idbg_demo.xcodeproj/: project.pbxproj
app/osx/idbg_demo/idbg_demoUITests/: idbg_demoUITests.m
app/windows/: idbg_demo.sln
app/windows/idbg_demo/: idbg_demo.vcxproj  main.cc
bak/IDbSample2/IDbSample2/: AppDelegate.m  SceneDelegate.m
bak/IDbSample2/IDbSample2.xcodeproj/: project.pbxproj
bak/IDbgPods/IDbgPods/: AppDelegate.h
bak/IDbgPods/IDbgPods/Base.lproj/: Main.storyboard
bak/IDbgSample/IDbgSample/: Heartbeat.mm
platform/android/app/: build.gradle
platform/android/gradle/wrapper/: gradle-wrapper.properties
platform/android/idbg_demo/: settings.gradle
platform/android/idbg_demo/app/: build.gradle
platform/ios/idbg_demo/idbg_demo/: Info.plist  ViewController.h  ViewController.m  main.m
platform/ios/idbg_demo/idbg_demo.xcodeproj/: project.pbxproj
platform/osx/idbg_demo/idbg_demo.xcodeproj/: project.pbxproj
platform/windows/: end_dump.bat  open_flag.bat  start_dump.bat
platform/windows/Debug/: idbg_demo.ilk
platform/windows/idbg_demo/: current_stack.cc  idbg_demo.vcxproj  main.cc  win_memory.cc
platforms_project/: ios.cmake
project/ios/: CMakeCache.txt  cmake_install.cmake
project/ios/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelWithDebInfo  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeDebug
project/ios/IDbg/: cmake_install.cmake
project/ios/IDbg.xcodeproj/: project.pbxproj
project/ios/idbg_demo.xcodeproj/: project.pbxproj
tool/: generate_osx_proj.sh  merge_frame.sh
tools/: build_android.sh  generate_ios_proj.sh  generate_osx_proj.sh  generate_vs_proj.bat  init.sh  init_git_pre_commit.bat  pre-commit
(+87 files in other folders)
