cmake_minimum_required(VERSION 3.10)
option(BUILD_SHARED_LIBS "Build using shared libraries" ON)
if (IOS OR MACOS)
    set(DEVELOPMENT_TEAM_ID "ACE4T95FK7")
    set(PROVISIONING_PROFILE_NAME, "mj")
endif()
project(cross_idbg)
add_subdirectory(IDbg)
if (ANDROID)
    message(WARNING "in top cmake ")
    add_subdirectory(platform/android/idbg_demo/app/src/main/cpp)
endif()
#add_subdirectory(app/ios/idbg_demo)